[project]
name = "azure-rbac"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi-azure-auth>=5.2.0",
    "fastapi[standard]>=0.137.1",
    "pydantic-settings>=2.14.1",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx2>=2.4.0",
    "prek>=0.4.5",
    "pyrefly>=1.1.0",
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.17",
    "ty>=0.0.49",
]
